--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-    "token": "NTA3MjY1OTIzOTkyOTExOTAz.Dr5s3w.lasfa933VPdodoYBKxe3umK-FDA",
+    "token": "NTA3MjY1OTIzOTkyOTExOTAz.DsIPNQ.EpHd-vpNkNx8ogUMTsgSJlupYXY",
     "prefix": "?"
 } 
